armhf builds have to run on ARM runners
Docker can run containers for the 32-bit platform but the actions runner
will try to run 64-bit executables from the host inside the 32-bit
container. The runner needs to be 32-bit, with multiarch packages on the
host.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,7 +14,7 @@ jobs:
           - arm64
         include:
           - architecture: armhf
-            runner_arch: ARM64
+            runner_arch: ARM
             docker_platform: linux/arm/v7
           - architecture: arm64
             runner_arch: ARM64
@@ -82,7 +82,7 @@ jobs:
           - arm64
         include:
           - architecture: armhf
-            runner_arch: ARM64
+            runner_arch: ARM
             docker_platform: linux/arm/v7
           - architecture: arm64
             runner_arch: ARM64
@@ -184,7 +184,7 @@ jobs:
           - '^game\.libretro\.[w-z].*'
         include:
           - architecture: armhf
-            runner_arch: ARM64
+            runner_arch: ARM
             docker_platform: linux/arm/v7
           - architecture: arm64
             runner_arch: ARM64
